@@ -51,6 +51,8 @@
   - remove DEPRECATED query caching system
   - remove DEPRECATED cache(DBIx::Custom)
   - remove DEPRECATED execute method(DBIx::Custom)'s sqlfilter option
+  - remove DEPRECATED update_timestamp
+  - remove DEPRECATED insert_timestamp
 
 0.37
   - catch up Object::Simple 3.16. fix DEPRECATED warnings.
